[package]
name = "wasm-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["console"] }
console_error_panic_hook = "0.1.7"
# Note: For real RAW decoding, crates like `rawler` or `image` would be added here.
# For this example, we'll parse dummy binary or simple unpacking to show the architecture.

[dev-dependencies]
wasm-bindgen-test = "0.3.38"