[package]
name = "wasm-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.93"
js-sys = "0.3.71"
web-sys = { version = "0.3.71", features = ["console"] }
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"