[package]
name = "wasm-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.93"
js-sys = "0.3.71"
web-sys = { version = "0.3.71", features = ["console"] }
console_error_panic_hook = "0.1.7"
rawloader = "0.37"  # 最新版は 0.37.1, LJPEG精度10対応未定

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
panic = "unwind"
lto = true
opt-level = "z"     # WASM バイナリサイズ最適化
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false